kubecost/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubecost
  namespace: kubecost
spec:
  type: NodePort
  selector:
    app: cost-analyzer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9090
